refactor(core): 优化代码实现并修复排序逻辑
- 将 AnimationPlayer 中的 lambda 表达式替换为方法引用以提高性能
- 修复 AudioAnalysisPanel 中的文本折叠功能，统一使用类常量
- 简化 Beatmap 中的事件排序逻辑，使用 Comparator.comparingDouble
- 移除 RhythmClassifier 中未使用的常量定义
- 更新 StageManager 中的列表访问方式，使用 getFirst() 替代索引访问